[metadata]
name = circadipy
version = 0.1.6
author = João Pedro Carvalho Moreira
author_email = mcjpedro@gmail.com
url = https://github.com/mcjpedro/circadipy
description = Tool for analyzing and visualizing circadian cycle data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = circadian, chronobiology, data

[options]
package_dir=
    =src
packages=find:
include_package_data=True
zip_safe=True

[options.packages.find]
where=src