[metadata]
name = circadipy
version = 0.1.11
author = João Pedro Carvalho Moreira
author_email = mcjpedro@gmail.com
url = https://github.com/mcjpedro/circadipy
description = Tool for analyzing and visualizing circadian cycle data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = circadian, chronobiology, data

[options]
package_dir=
    =src
packages=find:
include_package_data=True
zip_safe=True
install_requires =
    collection==0.1.6
    CosinorPy==3.0 
    matplotlib==3.6.2 
    matplotlib-inline==0.1.6  
    numpy==1.22.0 
    openpyxl==3.0.10 
    pandas==1.5.2  
    pillow==9.4.0  
    pymice==1.1.0
    seaborn==0.13.0  
    scikit-learn==1.2.0  
    scikit-optimize==0.9.0  
    scipy==1.10.0
    PyQt5==5.15.10
    notebook==7.1.3
    nbsphinx==0.9.3
    sphinx-rtd-theme==2.0.0
    ipykernel==6.29.4

[options.packages.find]
where=src
